@@ -3,68 +3,98 @@ package com.microservicio.stock.domain.service;
 import com.microservicio.stock.domain.exception.InvalidNameExceptionMe;
 import com.microservicio.stock.domain.model.Article;
 import com.microservicio.stock.domain.model.ArticleCategory;
+import com.microservicio.stock.domain.model.Category;
 import com.microservicio.stock.domain.ports.spi.ArticleOut;
+import com.microservicio.stock.domain.util.pageable.PageCustom;
+import com.microservicio.stock.domain.util.pageable.PageRequestCustom;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 class ArticleServiceTest {
 
-    @Mock
     private ArticleOut articleOut;
-
-    @InjectMocks
     private ArticleService articleService;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        articleOut = mock(ArticleOut.class);
+        articleService = new ArticleService(articleOut);
     }
 
     @Test
     void testCreateArticle_Success() {
-        String name = "Electronics";
-        String description = "All electronic items";
-        int quantity = 1;
-        BigDecimal price= BigDecimal.valueOf(12000);
-        List<ArticleCategory> categories = new ArrayList<>();
-        Long [] ids = {1L, 2L};
-        when(articleOut.existByName(name)).thenReturn(false);
-        when(articleOut.save(any(Article.class))).thenReturn(new Article(1L, name, description,quantity,price,categories));
+        when(articleOut.existByName("New Article")).thenReturn(false);
 
-        Article result = articleService.createArticle(name,description,quantity,price, List.of(ids));
+        Category category1 = new Category(1L, "Category1", "Description1");
+        Category category2 = new Category(2L, "Category2", "Description2");
+        when(articleOut.findCategoryById(1L)).thenReturn(category1);
+        when(articleOut.findCategoryById(2L)).thenReturn(category2);
+
+        Article articleToSave = new Article(null, "New Article", "Description", 10, BigDecimal.valueOf(100), null);
+        when(articleOut.save(any(Article.class))).thenReturn(articleToSave);
+
+        Article result = articleService.createArticle("New Article", "Description", 10, BigDecimal.valueOf(100), Arrays.asList(1L, 2L));
+
+        verify(articleOut).existByName("New Article");
+        verify(articleOut).save(any(Article.class));
+        verify(articleOut, times(2)).saveArticleCategory(any(ArticleCategory.class));
 
         assertNotNull(result);
-        assertEquals(name, result.getName());
-        assertEquals(description, result.getDescription());
+        assertEquals("New Article", result.getName());
+        assertEquals("Description", result.getDescription());
+        assertEquals(10, result.getQuantity());
+        assertEquals(BigDecimal.valueOf(100), result.getPrice());
     }
 
     @Test
-    void testCreateCategory_NameAlreadyExists() {
-        String name = "Electronics";
-        String description = "All electronic items";
-        int quantity = 1;
-        BigDecimal price= BigDecimal.valueOf(12000);
-        Long [] ids = {1L, 2L};
-        List<Long> categoryIds = List.of(ids);
-        when(articleOut.existByName(name)).thenReturn(true);
+    void testCreateArticle_InvalidNameException_ExistingName() {
+        when(articleOut.existByName("Existing Article")).thenReturn(true);
 
-        InvalidNameExceptionMe exception = assertThrows(
-                InvalidNameExceptionMe.class,
-                () -> articleService.createArticle(name, description, quantity, price, categoryIds)
-        );
+        InvalidNameExceptionMe exception = assertThrows(InvalidNameExceptionMe.class, () -> articleService.createArticle("Existing Article", "Description", 10, BigDecimal.valueOf(100), List.of(1L)));
 
         assertEquals("El nombre del articulo ya existe", exception.getMessage());
+        verify(articleOut).existByName("Existing Article");
+        verify(articleOut, never()).save(any(Article.class));
+    }
+
+    @Test
+    void testCreateArticle_InvalidNameException_CategorySize() {
+        when(articleOut.existByName("New Article")).thenReturn(false);
+        when(articleOut.findCategoryById(1L)).thenReturn(new Category(1L, "Category1", "Description1"));
+        when(articleOut.findCategoryById(2L)).thenReturn(new Category(2L, "Category2", "Description2"));
+        when(articleOut.findCategoryById(3L)).thenReturn(new Category(3L, "Category3", "Description3"));
+        when(articleOut.findCategoryById(4L)).thenReturn(new Category(4L, "Category4", "Description4"));
+
+        InvalidNameExceptionMe exception = assertThrows(InvalidNameExceptionMe.class, () -> articleService.createArticle("New Article", "Description", 10, BigDecimal.valueOf(100), Arrays.asList(1L, 2L, 3L, 4L)));
+
+        assertEquals("El articulo debe tener entre 1 y 3 categorías.", exception.getMessage());
+        verify(articleOut, never()).save(any(Article.class));
+    }
+
+    @Test
+    void testListArticle_Success() {
+
+        List<Article> articles = Arrays.asList(
+                new Article(1L, "Article1", "Description1", 5, BigDecimal.valueOf(50), null),
+                new Article(2L, "Article2", "Description2", 3, BigDecimal.valueOf(30), null)
+        );
+        when(articleOut.findAll()).thenReturn(articles);
+
+        PageRequestCustom pageRequestCustom = new PageRequestCustom(0, 2, true);
+        PageCustom<Article> result = articleService.listArticle(pageRequestCustom);
+
+        verify(articleOut).findAll();
+
+        assertNotNull(result);
+        assertEquals(2, result.getContent().size());
+        assertEquals("Article1", result.getContent().get(0).getName());
+        assertEquals("Article2", result.getContent().get(1).getName());
     }
 }
