@@ -7,12 +7,8 @@ import com.microservicio.stock.domain.util.pageable.PageCustom;
 import com.microservicio.stock.domain.util.pageable.PageRequestCustom;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 
-
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -20,67 +16,62 @@ import static org.mockito.Mockito.*;
 
 class BrandServiceTest {
 
-    @Mock
     private BrandOut brandOut;
-
-    @InjectMocks
     private BrandService brandService;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        brandOut = mock(BrandOut.class);
+        brandService = new BrandService(brandOut);
     }
 
     @Test
     void testCreateBrand_Success() {
-        String nombre = "Electronics";
-        String descripcion = "All electronic items";
+        when(brandOut.existsByName("New Brand")).thenReturn(false);
+        Brand brandToSave = new Brand(null, "New Brand", "New Description");
+        when(brandOut.save(any(Brand.class))).thenReturn(brandToSave);
 
-        when(brandOut.existsByName(nombre)).thenReturn(false);
-        when(brandOut.save(any(Brand.class))).thenReturn(new Brand(1L, nombre, descripcion));
+        Brand result = brandService.createBrand("New Brand", "New Description");
 
-        Brand result = brandService.createBrand(nombre, descripcion);
+        verify(brandOut).existsByName("New Brand");
+        verify(brandOut).save(any(Brand.class));
+
 
         assertNotNull(result);
-        assertEquals(nombre, result.getName());
-        assertEquals(descripcion, result.getDescription());
+        assertEquals("New Brand", result.getName());
+        assertEquals("New Description", result.getDescription());
     }
 
     @Test
-    void testCreateBrand_NameAlreadyExists() {
-        String nombre = "Electronics";
-        String descripcion = "All electronic items";
-
-        when(brandOut.existsByName(nombre)).thenReturn(true);
+    void testCreateBrand_InvalidNameException() {
+        when(brandOut.existsByName("Existing Brand")).thenReturn(true);
 
         InvalidNameExceptionMe exception = assertThrows(InvalidNameExceptionMe.class, () -> {
-            brandService.createBrand(nombre, descripcion);
+            brandService.createBrand("Existing Brand", "Description");
         });
 
         assertEquals("El nombre de la marca ya existe", exception.getMessage());
+        verify(brandOut).existsByName("Existing Brand");
+        verify(brandOut, never()).save(any(Brand.class));
     }
+
     @Test
     void testListBrand_Success() {
-        List<Brand> brands = List.of(new Brand(1L, "Books", "All kinds of books"), new Brand(2L, "Electronics", "All electronic items"));
+        List<Brand> brands = Arrays.asList(
+                new Brand(1L, "Brand1", "Description1"),
+                new Brand(2L, "Brand2", "Description2")
+        );
         when(brandOut.findAll()).thenReturn(brands);
 
-        PageRequestCustom pageRequestCustom = new PageRequestCustom(0, 10, true);
+        PageRequestCustom pageRequestCustom = new PageRequestCustom(0, 2, true);
+
         PageCustom<Brand> result = brandService.listBrand(pageRequestCustom);
 
-        assertNotNull(result);
-        assertEquals(2, result.getTotalElements());
-        assertEquals(1, result.getTotalPages());
-    }
-
-    @Test
-    void testListBrand_Empty() {
-        when(brandOut.findAll()).thenReturn(Collections.emptyList());
-
-        PageRequestCustom pageRequestCustom = new PageRequestCustom(0, 10, true);
-        PageCustom<Brand> result = brandService.listBrand(pageRequestCustom);
+        verify(brandOut).findAll();
 
         assertNotNull(result);
-        assertEquals(0, result.getTotalElements());
-        assertEquals(0, result.getTotalPages());
+        assertEquals(2, result.getContent().size());
+        assertEquals("Brand1", result.getContent().get(0).getName());
+        assertEquals("Brand2", result.getContent().get(1).getName());
     }
 }
